2010-01-01  Dirk Bergstrom  <krid@otisbean.com>

    * appinfo.js: Bump version for release.

Closes gh-4: Remove upgrade support for v0.0.1 db format
    * app/models/ring.js (_startDepotLoad): Do first-run tasks if no depot
    data is found.
    (_loadDataHandler): Remove first-run code and other legacy stuff.
    Add or enchance comments on a few methods.

    * app/models/upgrader.js: Remove version 0 upgrader, add comments.

Closes gh-2: Can't have more than 10 categories
    * app/models/ring.js (editCategory): Sort numerically instead of lexically
    when finding next available index.  Add logging.
    (categoriesForMojo): Sort numerically instead of lexically.
    (deleteCategory): Remove unused count of affected records.  Add logging.

    * app/assistants/categories-assistant.js (CategoryDialogAssistant.save):
    Remove log call.

Closes gh-1: Can't delete first item on item-list
    * stylesheets/keyring.css (#status): Change float: left to text-align: left.

Closes gh-3: Import from clipboard borken
    * app/assistants/actions-assistant.js (ImportExportDialogAssistant.setup):
    Make the 'data' input accept & display multi-line text.
    
    * app/views/actions/import-export-dialog.html: Add an id to the data
    input div, so we can control its size.    

    * stylesheets/keyring.css (#import-data-div): Add max-height to input div,
    now expands to ~3 lines of text before scrolling.

    * app/models/ring.js (importData): Strip whitespace from data before
    parsing.  Add return calls after calling callback on error.
    
2009-12-20  Dirk Bergstrom  <krid@otisbean.com>

    * app/assistants/categories-assistant.js (setup): Set initial focus to
    null.

    * app/models/ring.js (getItem): Remove encrypted stuff from item before
    passing it on.  Fixes incredibly stupid bug.
    (noteItemView): Only re-sort if currently sorting by viewed.  If so,
    set itemsReSorted, so the UI notices the change.
