@@ -11,7 +11,6 @@
  <div class="palm-list">
   <div class="palm-row first">
    <div class="palm-row-wrapper" x-mojo-focus-highlight="true">
-    <div class="label">Destination</div>
     <div id="destination" x-mojo-element="ListSelector"></div>
    </div>
   </div>
@@ -28,25 +27,34 @@
  <div class="palm-list">
   <div class="palm-row first">
    <div class="palm-row-wrapper" x-mojo-focus-highlight="true">
-    <div class="label">Source</div>
     <div id="source" x-mojo-element="ListSelector"></div>
    </div>
   </div>
   <div class="palm-row">
    <div class="palm-row-wrapper" x-mojo-focus-highlight="true">
-    <div class="label">Resolution</div>
     <div id="resolution" x-mojo-element="ListSelector"></div>
    </div>
   </div>
   <div class="palm-row">
    <div class="palm-row-wrapper" x-mojo-focus-highlight="true">
-    <div class="label">Import Preferences</div>
-    <div id="prefs" x-mojo-element="ToggleButton" class="left"></div>
+    <div class="label left">Import Preferences</div>
+    <div id="prefs" x-mojo-element="ToggleButton" class="right"></div>
    </div>
   </div>
   <div class="palm-row last">
    <div class="palm-row-wrapper" x-mojo-focus-highlight="true">
     <div x-mojo-element="Button" id="importButton"></div>
+   </div>
+  </div>
+ </div>
+</div>
+
+<div class="palm-group">
+ <div class="palm-group-title">Change Password</div>
+ <div class="palm-list">
+  <div class="palm-row single">
+   <div class="palm-row-wrapper" x-mojo-focus-highlight="true">
+    <div x-mojo-element="Button" id="changePasswordButton"></div>
    </div>
   </div>
  </div>
@@ -63,4 +71,4 @@
  </div>
 </div>
 
-
+<div class="scroll-fade-bottom" x-mojo-scroll-fade="bottom"></div>
