@@ -136,6 +136,12 @@ AppEngine service.</li>
 <div class="palm-info-text">
 <h4>Change Log</h4>
 <ul>
+<li>Version 0.1.1 - 2010-01-01<br />
+ - Fixed bugs in clipboard import, category addition, first item deletion &amp;
+ item-list sorting.
+ - Removed upgrade support for original db format in versions 0.0.1 & 0.0.2.
+</li>
+
 <li>Version 0.1.0 - 2009-12-20<br />
  - Added item categories, filtering by category and category management.<br />
  - Display of created/changed/viewed dates now on one line.<br />
